<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.home.HomeFragment">

            <ImageView
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/favouriteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:drawableLeft="@drawable/ic_like"
                android:text="@string/favourite"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@color/orange"
                app:cornerRadius="26dp"
                app:layout_constraintEnd_toStartOf="@+id/user"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/user"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_margin="16dp"
                android:src="@drawable/user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/heyMessage"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="42dp"
                android:gravity="start"
                android:text="@string/hey_joshua"
                android:textColor="@color/grey"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search" />

            <TextView
                android:id="@+id/exploreText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:fontFamily="@font/prata_regular"
                android:gravity="start"
                android:text="@string/explore_text"
                android:textColor="@color/blue"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/heyMessage" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/areaRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/exploreText" />

            <TextView
                android:id="@+id/legalEventText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="start"
                android:text="@string/top_legal_events"
                android:textColor="@color/blue"
                android:textSize="26sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/areaRecyclerView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/eventRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/legalEventText" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>