<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailFragment">

    <ImageView
        android:id="@+id/eventImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/lagos_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/arrow_left_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/user"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_margin="16dp"
        android:src="@drawable/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="300dp"
        android:background="@drawable/curved_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/attendee_three_img"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:src="@drawable/user"
            app:layout_constraintBottom_toBottomOf="@+id/attendee_one_img"
            app:layout_constraintEnd_toStartOf="@+id/attendeeNumberTV"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/attendee_two_img"
            app:layout_constraintTop_toTopOf="@+id/attendee_one_img"
            app:civ_border_width="2dp"
            app:civ_border_color="#EEEEEE"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/attendee_one_img"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:src="@drawable/user"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/attendee_two_img"
            app:layout_constraintEnd_toStartOf="@+id/attendee_two_img"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateTV"
            app:layout_constraintVertical_bias="1.0"
            android:layout_marginLeft="16dp"
            app:civ_border_width="2dp"
            app:civ_border_color="#EEEEEE"/>

        <TextView
            android:id="@+id/eventTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/blue"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="NBA" />


        <TextView
            android:id="@+id/locationTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@color/detail_location"
            app:layout_constraintStart_toEndOf="@+id/map_pin"
            app:layout_constraintTop_toBottomOf="@+id/eventTitleTV"
            tools:text="@string/placeholder_location" />

        <ImageView
            android:id="@+id/map_pin"
            android:layout_width="15dp"
            android:layout_height="19dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/map_pin_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/eventTitleTV" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:backgroundTint="@color/rating_bg"
            app:cornerRadius="15dp"
            tools:text="4.8"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            app:icon="@drawable/star_white"
            android:fontFamily="@font/poppins_medium"
            android:textSize="12sp"  />

        <TextView
            android:id="@+id/dateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/date_colour"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationTV"
            tools:text="23 Aug - 29 Aug" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/attendee_two_img"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:src="@drawable/user"
            app:layout_constraintBottom_toTopOf="@+id/eventOverviewTV"
            app:layout_constraintEnd_toStartOf="@+id/attendee_three_img"
            app:layout_constraintStart_toEndOf="@+id/attendee_one_img"
            app:layout_constraintTop_toBottomOf="@+id/dateTV"
            app:civ_border_width="2dp"
            app:civ_border_color="#EEEEEE"/>

        <TextView
            android:id="@+id/eventOverviewTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/event_overview"
            android:textColor="@color/orange"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/eventPlanTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/eventPlanTV" />

        <TextView
            android:id="@+id/eventPlanTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/event_plan"
            android:textColor="@color/event_plan_colour"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/overviewTV"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/overviewTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/overview_placeholder_text"
            app:layout_constraintBottom_toTopOf="@+id/registerButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerButton"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="90dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/orange"
            android:text="@string/register_now"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/attendeeNumberTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/detail_location"
            app:layout_constraintBottom_toTopOf="@+id/eventPlanTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@+id/dateTV"
            tools:text="+23 Others Attending"
            android:layout_marginRight="50dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>